flame-runtime/testsuite/tests/constraints/should_fail/flTFail001.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE TypeFamilies #-}
{-# LANGUAGE TypeOperators #-}
{-# LANGUAGE PostfixOperators #-}
{-# LANGUAGE FlexibleContexts #-}
{-# LANGUAGE RankNTypes #-}
{-# OPTIONS_GHC -fplugin Flame.Solver #-}
module ShouldFail where

import Flame.Assert
import Flame.Principals

neg_flTConf ::  SPrin p -> ()
neg_flTConf p = assertFlowsTo ((p*→) *∧ (SBot*←)) p
